--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "@types/nodemailer": "^6.4.16",
     "@types/validator": "^13.12.2",
@@ -44,10 +45,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
+    "sharp": "^0.33.5",
     "slugify": "^1.6.6",
+    "uuid": "^11.0.3",
     "validator": "^13.12.0"
   },
   "optionalDependencies": {
